--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SmartReply"></activity>
+        <activity android:name=".activities.SmartReply"></activity>
         <activity android:name=".activities.LanguageIdentification" />
         <activity android:name=".activities.ImageLabeling" />
         <activity android:name=".activities.BarCodeScanner" />
